[metadata]
name = caisson
version = attr: caisson.__version__
license = attr: caisson.__license__
description = attr: caisson.__description__ 
long_description = file: README.rst
keywords = attr: caisson.__keywords__
author = attr: caisson.__author__
author_email = attr: caisson.__author_email__
url = attr: caisson.__url__


[options]
zip_safe = True
packages = find:

[options.entry_points]
console_scripts =
    caisson = caisson.__main__:main
